Feat: Modify components and improve features
Add from and to dates to experience and education components, add more icons, add more logics to handle user input, add features to format date.

--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,5 +1,4 @@
 .forms {
-  /* width: 500px; */
   flex-basis: 40%;
   min-width: 310px;
   display: flex;
@@ -12,7 +11,8 @@ fieldset {
   flex-direction: column;
   gap: 20px;
   border: none;
-  box-shadow: 0 0 3px #cac8c8;
+  box-shadow: 0 0 2px #213547;
+  border: 1px solid #213547;
   padding: 20px;
   border-radius: 10px;
 }
@@ -26,10 +26,17 @@ legend > div {
   justify-content: space-between;
   align-items: center;
 }
-.toggle {
+.icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.toggle,
+.edit {
   background-color: #2f5bec;
   border-radius: 10px;
   width: 30px;
+  padding: 5px;
 }
 label {
   display: flex;
@@ -38,8 +45,8 @@ label {
 }
 label input,
 label textarea {
-  background-color: transparent;
-  border: 1px solid #cac8c8;
+  background-color: rgba(33, 53, 71, 0.3);
+  border: none;
   border-radius: 5px;
   padding: 10px;
 }
@@ -58,4 +65,10 @@ textarea {
 }
 [type="button"] {
   background-color: #f84b2c;
+}
+.dates {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
 }
