--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,23 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: #000;
+  color: #213547;
 }
 #root {
   max-width: 1440px;
   margin: 0 auto;
   padding: 32px 0;
-  background-color: #f4f7fa;
+  background-color: #fff;
   min-height: 100vh;
 }
 h1 {
   font-size: 2rem;
 }
 h2 {
-  font-size: 1.3rem;
-  color: #2f5bec;
+  font-size: 1.2rem;
+  /* color: #2f5bec; */
   font-weight: 400;
+  text-transform: uppercase;
 }
 .container {
   display: flex;
