--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(0, 0, 0, 1);
-  background-color: #ffffff;
+  color: #213547;
+  background-color: #213547;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +14,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fff;
   text-decoration: inherit;
 }
 a:hover {
@@ -72,14 +71,8 @@ button:focus-visible {
   }
 }
 @media screen and (max-width: 600px) {
-  * {
-    font-size: 0.9rem;
-  }
-  .output span,
-  .output h3 {
-    font-size: 1rem;
-  }
-  .toggle {
+  .toggle,
+  .edit {
     width: 20px;
   }
 }
